--- a/module-4 solution/index.html
+++ b/module-4 solution/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
 	<h1>------------------------- This is my module-4 solution ------------------------</h1>
-  <h2>-------------------Right click here on the window, then click inspect element, aftrwr clicking inspect go to console and check it--------------------</h2>
+  <h2>-------------------Right click here on the window, then click inspect element, 
+                                 after clicking inspect 
+                          go to console and check it--------------------</h2>
 	<script src="script.js" ="text/javascript">
 	
 		</script>
