--- a/module-4 solution/index.html
+++ b/module-4 solution/index.html
@@ -2,12 +2,15 @@
 <html>
 <head>
 	<title></title>
+<style>
+h2 {text-align: center;}
+</style>
 </head>
 <body>
 	<h1>------------------------- This is my module-4 solution ------------------------</h1>
   <h2>-------------------Right click here on the window, then click inspect element, <br>
                                  after clicking inspect <br>
-                          go to console and check it--------------------</h2>
+                          go to console and check it--------------------</h2> <br>
 	<script src="script.js" ="text/javascript">
 	
 		</script>
