--- a/module-4 solution/index.html
+++ b/module-4 solution/index.html
@@ -8,9 +8,9 @@ h2 {text-align: center;}
 </head>
 <body>
 	<h1>------------------------- This is my module-4 solution ------------------------</h1>
-  <h2>-------------------Right click here on the window, then click inspect element, <br>
+  <h2><-------------------Right click here on the window, then click inspect element, <br>
                                  after clicking inspect <br>
-                          go to console and check it--------------------</h2> <br>
+                          go to console and check it--------------------></h2> <br>
 	<script src="script.js" ="text/javascript">
 	
 		</script>
